<resources>
    <!--Application name -->
    <string name="app_name">Web Share Host</string>
    <!--Main Activity -->
    <string name="text_connected_clients">Connected clients:</string>
    <string name="settings_btn">Settings</string>
    <string name="stop_and_exit_btn">Stop and Exit</string>
    <!--Settings Activity -->
    <string name="web_title_text">Website title:</string>
    <string name="msg_anim_text">Animated message of the day:</string>
    <string name="direction_text">Animation direction:</string>
    <string name="backgnd_text">Website background image:</string>
    <string name="preview_text">Preview:</string>
    <string name="content_hint">Input your text here!</string>
    <string name="anim_hint">Enter your text here</string>
    <string name="title_hint">My website</string>
    <string name="edit_sett_btn">Edit website content</string>
    <string name="save_sett_btn">Save changes</string>
    <string name="more_info_btn">More info</string>
    <string name="radio_up">up</string>
    <string name="radio_down">down</string>
    <string name="radio_left">left</string>
    <string name="radio_right">right</string>
    <string name="img_description">Background preview</string>
    <!--Web Content Activity-->
    <string name="text_content_info_1">Add content to the body of your website here</string>
    <string name="text_content_info_2">(HTML supported)</string>
    <string name="save_content_btn">Save</string>
</resources>
